# idcs

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/hardened_tasks/: 001-normalize-ranges.json  002-unique-once.json  003-apply-coupon.json  004-redact-tokens.json  005-primary-contact.json
data/seed_tasks/: 01-sum.json  02-reverse.json  03-max-of-list.json  04-is-palindrome.json  05-binary-search.json  06-count-vowels.json  07-flatten-list.json  08-is-anagram.json  09-sort-underconstraint.json  10-divide-implicit-assumption.json  11-unique-preserve-order.json  12-clamp-contradiction.json
docs/: apart-hackathon-submission.md  design.md  overview.md  plan.md
experiments/basic_prompts/: distinguisher_basic.md  distinguisher_noop.md  (+2 more)
prompts/: coder_v0.md  distinguisher_v0.md  generator_v0.md  hard_mbpp_rules_distinguisher_v0.md  hard_mbpp_rules_generator_v0.md  user_proxy_v0.md
scripts/: baseline.py  batch_baseline.py  clarification_rate.py  cold_start.py  export_prompts.py  inspect.py  inspect_run.py  parallel_train.py  probe_hardness.py  train.py  train_gepa.py
tests/: fakes.py  test_batch_baseline.py  test_benchmark_tasks.py  test_coder.py  test_export_prompts.py  test_gepa_adapter.py  test_hardened_corpus.py  test_llm_budget.py  test_llm_codex.py  test_optimizer_coevolve.py  test_optimizer_mutate.py  test_optimizer_population.py  test_orchestrator.py  test_probe_hardness.py  test_rewards.py  test_runner.py  test_schemas.py  test_scoring.py  test_spec_strength.py  test_telemetry.py  test_vuln_tasks.py
(+38 files in other folders)
