[project]
name = "idcs"
version = "0.1.0"
description = "Spec-guided software development pipeline with adversarial spec generation"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.50",
    "pydantic>=2.0",
    "evalplus>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/idcs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/idcs"]

[[tool.mypy.overrides]]
module = "evalplus.*"
ignore_missing_imports = true
